compiler/tests/success/subarrays/x86-64/test1_unknown2.jazz
export fn test () -> reg u64 {
  stack u64[10] s;
  reg ptr u64[1] t t2;
  reg u64 r;
  //s[0] = 0; // this bugs if we remove this line
  t = s[0:1];
  t.[0] = 0;
  t2 = t;
  s[0:1] = t2;
  r = s[0];
  if (r >= 0) {
    r = 1;
  } else {
    r = 0;
  }
  r += 2;
  return r;
}
